  * Removed obsolete debug options.
  * Fix timeout and multiple event RRD update in readsbrrd.
  * Update bootstrap v4.5.0.
  * Contribution via dump1090-fa
    * Factor out FIFO handling; reimplement as a linked list, not a circular buffer.
    * Use a bounce buffer for rtlsdr on ARM to work around zero-copy problems.
    * Factor out SDR thread CPU monitoring.

 -- Michael Wolf <michael@mictronics.de>  Sat, 01 Aug 2020 09:38:01 +0200

readsb (4.0.0) stable; urgency=medium

  * Version bump: v4.0.0 and later will use protocol buffer instead of JSON.
  * Add switch to activate trace details while mouse hovering along trace segments.
  * Add quick filter switch that shows only selected aircraft.
  * Add SkyVector API key input in GUI to prevent key leakage through JSON file.
  * Add switch to dim map independent of GUI dark mode.
  * Use SVG element of aircraft icon directly in DOM for easy manipulation.
  * Fixed latest statistics.
  * Storing and exchanging aircraft meta data using Protocol Buffer.
  * Webapp: History loading and trace collection moved to background worker.
  * Add tracked positions to stats.
  * Use only single range histogram buffer.
  * Add and generate maximum polar range with --stats-range option enabled.
  * Range polar plot available as map overlay.
  * Range histogram removed.
  * Add RRD file statistics generation as systemd service.
  * Add receiver and system performance graphs.
  * Removed JSON file generation
  * Removed preprocessor definitions for WIN32.
  * Trigger RRD update from readsb process through semaphore.
  * Improvement of SBS decoding. (by wiedehopf)
  * Add marker types for ground vehicles and towers.
  * Add world magnetic model and geomagnetism calculation.
  * Performing wind calculation server side for better time correlation of used values.
  * Add polyfill for nested dedicated workers as WebKit does not support them.
  * Fully support GNS HULC antenna, including its GPS.